--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
-  <display-name>myjsp</display-name>
+  <display-name>BOMjsp</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -9,25 +9,17 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
-  
-  
   <session-config>
-  	<session-timeout>30</session-timeout>
+    <session-timeout>30</session-timeout>
   </session-config>
-  
   <context-param>
-  	<description>로깅여부</description>
-  	<param-name>logEnabled</param-name>
-  	<param-value>true</param-value>
+    <description>로깅여부</description>
+    <param-name>logEnabled</param-name>
+    <param-value>true</param-value>
   </context-param>
-  
-  
-  
-    <context-param>
-      	<description>디버깅 레벨</description>
-  	<param-name>debugLevel</param-name>
-  	<param-value>665543</param-value>
+  <context-param>
+    <description>디버깅 레벨</description>
+    <param-name>debugLevel</param-name>
+    <param-value>665543</param-value>
   </context-param>
-  
 </web-app>
