--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
-  <display-name>myjsp</display-name>
+  <display-name>bomjsp</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -26,87 +26,7 @@
 	<param-value>5</param-value>  
   </context-param>
   
-  <servlet>
-  	<servlet-name>servlet01</servlet-name>
-  	<servlet-class>chap17.ServletEx01</servlet-class>
-  </servlet>
-  
-  <servlet-mapping>
-  	<servlet-name>servlet01</servlet-name>
-  	<url-pattern>/ex01</url-pattern>
-  </servlet-mapping>
-  
-  <servlet-mapping>
-  	<servlet-name>servlet01</servlet-name>
-  	<url-pattern>/ex011</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-  	<servlet-name>Servlet9</servlet-name>
-  	<servlet-class>chap17.ServletEx09</servlet-class>
-  	<init-param> 
-  		<param-name>dburl</param-name>
-  		<param-value>jdbc:oracle:thin:@localhost:1521:orcl</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>dbid</param-name>
-  		<param-value>c##mydbms</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>dbpw</param-name>
-  		<param-value>admin</param-value>
-  	</init-param>
-  	<load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <servlet-mapping>
-  	<servlet-name>Servlet9</servlet-name>
-  	<url-pattern>/ex09</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-  	<servlet-name>ControllerUsingURI</servlet-name>
-  	<servlet-class>chap18.ControllerUsingURI</servlet-class>
-  	<init-param>
-  		<param-name>configFile</param-name>
-  		<param-value>/WEB-INF/commandHandlerURI.properties</param-value>
-  	</init-param>
-  </servlet>
-  
-  <servlet-mapping>
-  	<servlet-name>ControllerUsingURI</servlet-name>
-  	<url-pattern>*.do</url-pattern>
-  </servlet-mapping>
-  
-  <filter>
-  	<filter-name>filter01</filter-name>
-  	<filter-class>chap19.lecture.Filter01</filter-class>
-  </filter>
-  
-  <filter>
-  	<filter-name>filter02</filter-name>
-  	<filter-class>chap19.lecture.Filter02</filter-class>
-  </filter>
-  
-  <filter>
-  	<filter-name>request-encoding</filter-name>
-  	<filter-class>chap19.lecture.Filter03ReqEncoding</filter-class>
-  </filter>
-  
-  <filter-mapping>
-  	<filter-name>request-encoding</filter-name>
-  	<url-pattern>/*</url-pattern>
-  </filter-mapping>
-  
-  <filter-mapping>
-  	<filter-name>filter02</filter-name>
-  	<url-pattern>/filter/ex1</url-pattern>
-  </filter-mapping>
-  
-  <filter-mapping>
-  	<filter-name>filter01</filter-name>
-  	<url-pattern>/filter/*</url-pattern>
-  </filter-mapping>
+
 </web-app>
 
 
