--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -27,6 +27,27 @@
 	<param-value>5</param-value>  
   </context-param>
   
+  
+  <context-param>
+    <param-name>my-param1</param-name>
+    <param-value>my-value1</param-value>
+  </context-param>  
+
+
+  <context-param>
+    <param-name>jdbcUrl</param-name>
+    <param-value>jdbc:oracle:thin:@mydb501_high?TNS_ADMIN=C:\\Users\\admin\\Documents</param-value>
+  </context-param>  
+  
+    <context-param>
+    <param-name>jdbcUser</param-name>
+    <param-value>mydb15</param-value>
+  </context-param>  
+
+    <context-param>
+    <param-name>jdbcPassword</param-name>
+    <param-value>adminAdmin12</param-value>
+  </context-param>  
 
 </web-app>
 
